# manifold

./: .gitignore  README.md  __init__.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: StatusBar.jsx
dashboard/src/components/panels/: AlarmPanel.jsx  MetricCard.jsx  MetricChart.jsx  UMAPPanel.jsx
examples/: simulate.py
manifold/: __init__.py
manifold/core/: hooks.py  metrics.py
manifold/server/: watcher.py
tests/: test_hooks.py  test_metrics.py  test_watcher.py
